--- a/admin/dashboard/index.html
+++ b/admin/dashboard/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeHotel - Dashboard</title>
-    <link rel="stylesheet" href="assets/css/admin/shared/reset.css">
-    <link rel="stylesheet" href="assets/css/admin/shared/header.css">
-    <link rel="stylesheet" href="assets/css/admin/shared/pages.css">
-    <link rel="stylesheet" href="assets/css/admin/shared/footer.css">
+    <link rel="stylesheet" href="../../assets/css/admin/pages/dashboard/index.css">
 </head>
 <body>
     <header>
@@ -15,28 +12,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href="dashboard.html">Inicio</a>
+                    <a href="../dashboard">Inicio</a>
                 </li>
                 <li>
-                    <a href="hospedes.html">Hospedes</a>
+                    <a href="../hospedes">Hospedes</a>
                 </li>
                 <li>
-                    <a href="reservas.html">Reservas</a>
+                    <a href="../reservas">Reservas</a>
                 </li>
                 <li>
-                    <a href="quartos.html">Quartos</a>
+                    <a href="../quartos">Quartos</a>
                 </li>
                 <li>
-                    <a href="servicos.html">Serviços</a>
+                    <a href="../servicos">Serviços</a>
                 </li>
                 <li>
-                    <a href="relatorio">Relatórios</a>
+                    <a href="../relatorios">Relatórios</a>
                 </li>
                 <li>
-                    <a href="configuracoes">Configurações</a>
+                    <a href="../configuracoes">Configurações</a>
                 </li>
                 <li>
-                    <a href="logout.html">Sair</a>
+                    <a href="../logout.html">Sair</a>
                 </li>
             </ul>
         </nav>
